# lab-4-birukm

./: CMakeLists.txt
file_disemvowel/: file_disemvowel.c
file_disemvowel/tests/: file_disemvowel  file_disemvowel.c
summarize_tree/: summarize_tree.c  summarize_tree.sh  summarize_tree_ftw.c
